cut extra, focus on metrics

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,27 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "5a4b1bf8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "#from ipyleaflet import (Map, GeoData, basemaps, WidgetControl, GeoJSON,\n",
-    " #LayersControl, Icon, Marker,basemap_to_tiles, Choropleth,\n",
-    " #MarkerCluster, Heatmap,SearchControl, \n",
-    " #FullScreenControl)\n",
-    "#from ipywidgets import Text, HTML\n",
-    "#from branca.colormap import linear\n",
-    "#import geopandas as gpd\n",
-    "import json"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0a201f87",
    "metadata": {},
    "outputs": [],
@@ -34,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "701d29bc",
    "metadata": {},
    "outputs": [],
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "37204d64",
    "metadata": {},
    "outputs": [
@@ -287,7 +279,7 @@
        "[1117 rows x 10 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "01422950",
    "metadata": {},
    "outputs": [
@@ -431,7 +423,7 @@
        "[1060 rows x 3 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,8 +439,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "7cc13e42",
+   "execution_count": 6,
+   "id": "f0925d23",
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +571,7 @@
        "[1060 rows x 3 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,85 +580,6 @@
     "# I need to sort by 'accepted_timestamp'\n",
     "driver_timestamps_df.sort_values(by='accepted_timestamp',axis=0, ascending=True, inplace=False, kind='quicksort', na_position='last', ignore_index=False, key=None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74519f56",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output to csv for tableau\n",
-    "#driver_timestamps_df.to_csv(\"output/driver_timestamps_df.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "278cc3e1",
-   "metadata": {},
-   "source": [
-    "### Create DataFrame of Driver Start and End"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cc8fecde",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# this data shows start of driving sessions, the duration of the session in hours\n",
-    "# the start and end location of each session\n",
-    "driver_sessions_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "51a6487f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# output to csv file for tableau\n",
-    "#driver_start_end_df.to_csv(\"output/driver_start_end_df.csv\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "78bdad82",
-   "metadata": {},
-   "source": [
-    "### GeoMap Passenger Requests with GeoPandas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2fc962ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texas_shape = gpd.read_file('shape/State.shp')\n",
-    "texas_shape.iloc[0]['geometry']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5018569f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "str(texas_shape.iloc[0]['geometry'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aed463cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
